--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^0.23.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
@@ -46,11 +47,14 @@
     "axios": "^0.19.2",
     "babel-preset-es2015": "^6.24.1",
     "file-loader": "^6.0.0",
+    "md5": "^2.3.0",
     "postcss-csso": "^4.0.0",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
     "react": "^16.13.1",
+    "react-animated-number": "^0.4.4",
+    "react-countup": "^4.3.3",
     "react-dom": "^16.13.1",
     "react-hot-loader": "^4.12.21",
     "url-loader": "^4.1.0"
