--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-countup": "^4.3.3",
     "react-dom": "^16.13.1",
     "react-hot-loader": "^4.12.21",
+    "react-swipeable": "^5.5.1",
     "socket.io-client": "^2.3.1",
     "url-loader": "^4.1.0"
   }
